switching over to EJS to get JS functions to work

--- a/Views_HBS/welcome.hbs
+++ b/Views_HBS/welcome.hbs
@@ -1,13 +1,10 @@
-<header>
-    <h1>STAR WARS TRIVIA</h1>
-</header>
-{{#each character}}
-<div class="container">
+{{!-- {{#each character}} --}}
+<div class="container d-inline-flexbox">
     <div>
         <h2>Welcome!</h2>
         <p>This is a Star Wars trivia game featuring some of your favorite characters. Take a guess at the name of each character that appears to win!</p>
     </div>
 
-    <a href="/character"></a>
+    <a href="/character" class="btn btn-primary">Start game</a>
 </div>
-{{/each}}
+{{!-- {{/each}} --}}
