--- a/Views/layout.ejs
+++ b/Views/layout.ejs
@@ -10,10 +10,13 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style.css">
+    {{!-- <link rel="stylesheet" href="./style.css"> --}}
     <title>Star Wars Trivia</title>
 </head>
 <body>
+  <h1 class="container d-flex justify-content-center align-items-center">STAR WARS TRIVIA</h1>
+  <div class="container d-flex-column justify-content-center align-items-center">
     {{{body}}}
+  </div>
 </body>
 </html>
