--- a/Views/layout.hbs
+++ b/Views/layout.hbs
@@ -18,5 +18,6 @@
   <div class="container d-flex-column justify-content-center align-items-center">
     {{{body}}}
   </div>
+     <script src="../controllers/controller.js"></script>
 </body>
 </html>
